# cpp_video2ascii

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  MyExecutable  README.md  cmake_install.cmake
.cache/clangd/index/: main.cpp.66A0443CF9C6777D.idx
cmake_build_Release/: CMakeCache.txt  Makefile  MyExecutable  cmake_install.cmake  compile_commands.json
cmake_build_Release/.cmake/api/v1/reply/: codemodel-v2-65fe974223a46e755866.json  index-2023-05-26T21-11-39-0800.json  target-MyExecutable-Release-225c515d887be409428e.json
src/: main.cpp
